--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1682,3 +1682,11 @@ msgstr ""
 msgctxt "#40240"
 msgid "Hide CD case on music visualisation screen."
 msgstr ""
+
+msgctxt "#40241"
+msgid "Hide pictures info"
+msgstr ""
+
+msgctxt "#40242"
+msgid "Mosaics"
+msgstr ""
