--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,4 +1,6 @@
 1.5.7 :
+• Add buffering progress on video fullscreen
+• Improve esthetic appearance
 • Fix missing skin settings icons
 • Other Fixes
 
