--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1145,9 +1145,13 @@ msgctxt "#40103"
 msgid "Unwatched TV shows"
 msgstr ""
 
-# empty strings "40104"
+msgctxt "#40104"
+msgid "Hide notification popup during playback"
+msgstr ""
 
-# empty strings "40105"
+msgctxt "#40105"
+msgid "Hide notification popup during video or music playback."
+msgstr ""
 
 # empty strings "40106"
 
