--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,6 @@
+1.5.8 :
+• Fix 'Play recording' button on Recordings Info dialog
+
 1.5.7 :
 • Add buffering progress on video fullscreen
 • Add setting to hide notification popup during playback
