--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1153,9 +1153,13 @@ msgctxt "#40105"
 msgid "Hide notification popup during video or music playback."
 msgstr ""
 
-# empty strings "40106"
+msgctxt "#40106"
+msgid "Select widgets first"
+msgstr ""
 
-# empty strings "40107"
+msgctxt "#40107"
+msgid "Navigates main menu to widgets rather than main menu to submenus icons."
+msgstr ""
 
 msgctxt "#40108"
 msgid "Next aired"
