--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -710,7 +710,9 @@ msgctxt "#40027"
 msgid "Show artists clearlogos"
 msgstr "Afficher les logos des artistes"
 
-# empty strings "40028"
+msgctxt "#40028"
+msgid "Hide plots to avoid spoilers"
+msgstr "Masquer les résumés pour éviter les spoilers"
 
 msgctxt "#40029"
 msgid "Enable extrafanarts for background"
@@ -1124,7 +1126,9 @@ msgctxt "#40131"
 msgid "Show artists clearlogos on music library."
 msgstr "Permet d'afficher les logos des artistes sur la bibliothèque des musiques."
 
-# empty strings "40132"
+msgctxt "#40132"
+msgid "Plot masked to avoid spoilers"
+msgstr "Résumé masqué pour éviter les spoilers"
 
 msgctxt "#40133"
 msgid "Show studios and recordslabels icons on library."
@@ -1573,3 +1577,7 @@ msgstr "Masquer l'heure et la date"
 msgctxt "#40244"
 msgid "Hide time and date on top bar."
 msgstr "Permet de masquer l'heure et la date sur la barre du haut."
+
+msgctxt "#40245"
+msgid "Hide plots of unwatched episodes to avoid spoilers."
+msgstr "Permet de masquer les résumés des épisodes non vus pour éviter les spoilers."
