--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,7 @@
+1.6.1 :
+• Add possibility to hide plots of unwatched episodes to avoid spoilers
+• Misc fixes
+
 1.6.0 :
 • Add in progress/watched flag icons for widgets
 • Add 'Stop Scanning' option to Submenu
