• Add possibility to search addons with search function on home menu • Add new submenu items for addons • Misc fixes

--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,5 +1,7 @@
 1.6.1 :
 • Add possibility to hide plots of unwatched episodes to avoid spoilers
+• Add possibility to search addons with search function on home menu
+• Add new submenu items for addons
 • Misc fixes
 
 1.6.0 :
