--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -1152,8 +1152,8 @@ msgid "Show artists clearlogos on music library."
 msgstr "Permet d'afficher les logos des artistes sur la bibliothèque des musiques."
 
 msgctxt "#40132"
-msgid "Plot masked to avoid spoilers"
-msgstr "Résumé masqué pour éviter les spoilers"
+msgid "Plot masked to avoid spoilers."
+msgstr "Résumé masqué pour éviter les spoilers."
 
 msgctxt "#40133"
 msgid "Show studios and recordslabels icons on library."
