• Replace some Skin Helper widgets had to recent changes of Skin Helper Services • Minnor fixes

--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,8 +1,10 @@
 1.6.3 :
 • Replace channels numbers by channels icons on PVR Guide
+• Replace some Skin Helper widgets had to recent changes of Skin Helper Services
 • Fix on smartplaylist editor	
 • Fix widgets on addons launcher
 • New 4K flag icon
+• Minnor fixes
 	
 1.6.2 :
 • Add seeklabel on music OSD
