• Add genres icons for thumbnail • Replace some Skin Helper widgets had to recent changes of Skin Helper Services • Update German translation

--- a/skin.estuary.mod/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod/language/resource.language.de_de/strings.po
@@ -1619,3 +1619,7 @@ msgstr "Verstecke gesehene, kürzlich hinzugefügte Medien"
 msgctxt "#40249"
 msgid "Unwatched music videos recently added"
 msgstr "Kürzlich hinzugefügte ungesehene Musikvideos"
+
+msgctxt "#40250"
+msgid "Bigger font"
+msgstr "Größere Schrift"
