• Add possibility to pause video when viewing extended info

--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -2,6 +2,7 @@
 • Add status of tv shows from Next Aired addon on video infos
 • Add genres icons for thumbnails
 • Add bigger font (Thanks to schumi2004)
+• Add possibility to pause video when viewing extended info
 • Hide videowindow and visualisation of background when slideshow is active
 • Minnor fixes
 
